# catkin_ws_automodelcar

./: LICENSE  README.md
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/include/automodelcar/: Intersection.h  Lane.h  Obstacles.h
devel/lib/automodelcar/: image_preproces  lane_detection  lane_follower  motion
devel/lib/pkgconfig/: automodelcar.pc  lane_follower.pc
devel/lib/python2.7/dist-packages/automodelcar/msg/: _Intersection.py  _Lane.py  _Obstacles.py  __init__.py
devel/share/automodelcar/cmake/: automodelcar-msg-paths.cmake  automodelcarConfig.cmake
devel/share/common-lisp/ros/automodelcar/msg/: Intersection.lisp  Lane.lisp  Obstacles.lisp  _package.lisp  _package_Intersection.lisp  _package_Lane.lisp  _package_Obstacles.lisp  automodelcar-msg.asd
devel/share/gennodejs/ros/automodelcar/msg/: Intersection.js  Lane.js  Obstacles.js  (+1 more)
devel/share/lane_follower/cmake/: lane_followerConfig.cmake
devel/share/roseus/ros/automodelcar/: manifest.l
src/automodelcar/: CMakeLists.txt
src/automodelcar/msg/: Lane.msg  Obstacles.msg
src/automodelcar/src/Off_ROS_Image_Process/: CMakeCache.txt  CMakeLists.txt  LaneDetection.h  Makefile  cmake_install.cmake  line_detection  line_detection.cpp
src/automodelcar/src/Off_ROS_Image_Process/TestPictures/Tratamiento_conMesa_unCarril/: parametros
src/automodelcar/src/image_preproces/: image_preproces.cpp
src/automodelcar/src/lane_detection/: lane_detection.cpp  lane_detection.h
src/automodelcar/src/lane_follower/: lane_follower.cpp  lane_follower.h
src/automodelcar/src/motion/: motion.cpp
(+3 files in other folders)
